# InflGame

./: .buildinfo  .gitignore  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: InflGame.doctree
.github/: copilot-instructions.md
.github/workflows/: documentation.yml
api/: InflGame.html
api/MARL/: InflGame.MARL.IQL_async.html  InflGame.MARL.IQL_sync.html  InflGame.MARL.MARL_plots.html  InflGame.MARL.async_game.html  InflGame.MARL.html  InflGame.MARL.sync_game.html  InflGame.MARL.utils.html
api/adaptive/: InflGame.adaptive.grad_func_env.html  InflGame.adaptive.html  InflGame.adaptive.visualization.html
api/domains/: domains.html
api/kernels/: InflGame.kernels.MV_gauss.html  InflGame.kernels.diric.html  InflGame.kernels.gauss.html  InflGame.kernels.html  InflGame.kernels.jones.html
api/utils/: InflGame.utils.data_management.html  InflGame.utils.general.html  InflGame.utils.html
demo/custom_kernels/: custom_1d.ipynb  custom_2d.ipynb
demo/paper_kernels/: Dirichlet.ipynb  Dirlechet.ipynb  Gaussian.ipynb  Mulit_variate_Gaussian.ipynb  Multi_variate_Gaussian.ipynb
demo/rl_examples/: bifurication_plot.ipynb  rl_async_IQL.ipynb
demo/voting_dynamics/: Voting_3p_ab.ipynb  Voting_3party.ipynb  Voting_abstaining.ipynb
docs/: .jupyterlite.doit.db  conf.py  index.rst
docs/api/: InflGame.rst
paper/SI/: main.aux  main.bbl  main.bcf  (+8 more)
src/: Dirlechet.ipynb  abstaining and third_party_voting.ipynb
(+348 files in other folders)
