[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"





[project]
name = "influencer_games"
version = "0.1.0"
authors = [
  { name="Mark Lovett", email="mark.s.lovett981@gmail.com" },
]
requires-python = ">=3.9"
dependencies = ["gymnasium>=1.0.0",
"hickle>=5.0.3",
"imageio>=2.37.0",
"matplotlib>=3.10.1",
"numpy>=2.2.4",
"ray>=2.42.1",
"scipy>=1.15.2",
"seaborn>=0.13.2",
"torch>=2.6.0",
]

description = "A package for studying influencer games using adaptive dynamics and reinforcement learning"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"